--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@ label {
     display: flex;
     gap: 1%;
 }
+
+#linkedin {
+    width: 3vh;
+    height: auto;
+}
+
+#github {
+    width: 5vh;
+    height: auto;
+}
+
+p {
+   font-size: 2vh; 
+}
